feat: create api health check
